debug option change

--- a/src/nvidia/Makefile
+++ b/src/nvidia/Makefile
@@ -130,9 +130,9 @@ CFLAGS += -DNV_PRINTF_STRINGS_ALLOWED=1
 CFLAGS += -DNV_ASSERT_FAILED_USES_STRINGS=1
 CFLAGS += -DPORT_ASSERT_FAILED_USES_STRINGS=1
 
-ifeq ($(DEBUG),1)
-  CFLAGS += -gsplit-dwarf
-endif
+#ifeq ($(DEBUG),1)
+#  CFLAGS += -gsplit-dwarf
+#endif
 
 # Define how to perform dead code elimination: place each symbol in its own
 # section at compile time, and garbage collect unreachable sections at link
